--- a/estilos.css/estilos.css
+++ b/estilos.css/estilos.css
@@ -127,4 +127,23 @@
                      color: #000000;
                      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
               }
-                
+                   .gatito_1 {
+                          display: flex;
+                          flex-direction: column;
+                          align-items: center;  
+                          justify-content: center;
+                          text-align: center;
+                          margin-top: 20px ,
+                          }
+                                  #despedida_final {
+                                            font-size: 40px; 
+                                            color: #dd0a0a;     /* opcional: color del texto */
+                                            margin-bottom: 10px;
+                                   }
+
+
+              
+
+              
+
+          
